Fixing tags missalignment

--- a/src/sass/modules/_article.scss
+++ b/src/sass/modules/_article.scss
@@ -5,6 +5,10 @@
     flex-wrap: wrap;
   }
 
+  &__tags {
+    margin-bottom: 0;
+  }
+
   &__tag {
     margin: .4rem;
   }
